# datakit

./: Cargo.toml  datakit.meta.json  rust-toolchain.toml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: json-schema-test.yml  release.yml  test.yml
crates/mock_proxy_wasm/: Cargo.toml
crates/mock_proxy_wasm/src/: lib.rs
docs/: datakit.md
examples/call_headers/: demo.sh
examples/call_headers/config/: demo.yml
examples/facts/: demo.sh
examples/facts/config/: demo.yml
examples/property/: demo.sh  reset.sh
examples/property/config/: demo.yml
examples/request_headers/: demo.sh  reconfigure.sh
examples/request_headers/config/: demo.yml
examples/service_request/: demo.sh
examples/service_request/config/: demo.yml
src/: config.rs  data.rs  debug.rs  dependency_graph.rs  filter.rs  nodes.rs  payload.rs
src/nodes/: call.rs  exit.rs  handlebars.rs  jq.rs  property.rs  response.rs  template.rs
tests/config-json-schema/: test.sh
tests/config-json-schema/invalid/: call-negative-timeout.yml  call-node.yml  content_type.yml  exit-node-status-out-of-range.yml  exit-node.yml  handlebars-node.yml  missing-node-type.yml  node-input-inputs.yml  node-input-output.yml  node-output-outputs.yml  reserved-name.yml
tests/config-json-schema/valid/: call-jq-exit.yml  call-timeout-range.yml  exit-node-status-range.yml
