[package]
name = "datakit"
version = "0.1.1"
authors = ["Hisham Muhammad <hisham@gobolinux.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde-json-wasm = "1.0.1"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
"url" = "2.5.0"
handlebars = "6.2.0"
jaq-interpret = "1.2.1"
jaq-parse = "1.0.2"
jaq-core = "1.2.1"
jaq-std = "1.2.1"
derivative = "2.2.0"
form_urlencoded = "1.2.1"

[dev-dependencies]
mock_proxy_wasm = { path = "crates/mock_proxy_wasm" }

[package.metadata.wasm-opt]
# https://github.com/brson/wasm-opt-rs/releases/tag/v0.116.1
# released 2024-03-31
version = "0.116.1"
